--- a/Proyecto_ML/App.config
+++ b/Proyecto_ML/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="unica"
+			connectionString="Data Source=DESKTOP-4JGUS2G\SQLEXPRESS;Initial Catalog=facturas;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
