--- a/Proyecto_ML/App.config
+++ b/Proyecto_ML/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="unica"
-			connectionString="Data Source=DESKTOP-4JGUS2G\SQLEXPRESS;Initial Catalog=facturas;Integrated Security=True"
+			connectionString="Data Source=DESKTOP-4JGUS2G\SQLEXPRESS;Initial Catalog=testfacturas;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
