--- a/Proyecto_ML/App.config
+++ b/Proyecto_ML/App.config
@@ -3,8 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="unica"
-			connectionString="Data Source=DESKTOP-4JGUS2G\SQLEXPRESS;Initial Catalog=testfacturas;Integrated Security=True"
+        <add name="unica" connectionString="Data Source=DESKTOP-4JGUS2G\SQLEXPRESS;Initial Catalog=testfacturas;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
