--- a/Proyecto_ML/Proyecto_ML.csproj
+++ b/Proyecto_ML/Proyecto_ML.csproj
@@ -174,8 +174,10 @@
     <None Include="Resources\fondo_prin_figures.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\plantilla.html" />
-    <Content Include="Resources\shop.png" />
+    <None Include="Resources\shop.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\plantilla.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
